# MINIST-CPP-ML

./: CMakeLists.txt  README.md
K-Means/include/: KMeans.hpp
K-Means/src/: KMeans.cpp
KNN/include/: knn.hpp
KNN/src/: knn.cpp
include/: CommonAlg.hpp  Data.hpp  DataHandler.hpp
src/: CommonAlg.cpp  Data.cpp  DataHandler.cpp
